Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-40604

Dashed line drawing with Direct2D very slow

XMLWordPrintable

    • Icon: Bug Bug
    • Resolution: Done
    • Icon: P2: Important P2: Important
    • 5.4.2
    • 5.3.1
    • QPA: Direct2D
    • None
    • dee1998d4e50d70fe212e46dd0b030337e7884cd

      Drawing dashed/dotted lines with the direct2d platform plugin is extremely slow. Microsoft suggests not using dashed lines if performance is important and instead using e.g. tiled bitmaps: http://msdn.microsoft.com/en-us/library/windows/desktop/dd372260(v=vs.85).aspx#tiledbitmaps

        For Gerrit Dashboard: QTBUG-40604
        # Subject Branch Project Status CR V

            andrew.knight Andrew Knight
            louai Louai Al-Khanji
            Votes:
            1 Vote for this issue
            Watchers:
            4 Start watching this issue

              Created:
              Updated:
              Resolved:

                There are no open Gerrit changes